# misc

./: amith.py  report.md  requirements.txt
Brain Tumour Detection Using CNN/: notebook.ipynb
Credit Score Forecasting and Risk Assessment/: notebook.ipynb
Crew AI/: notebook.ipynb
Cricket World Cup Final Analysis/: notebook.ipynb
Detection of Vehicle Number on Licence Plate/: all_functions.m  create_templates.py  notebook.ipynb  number_detection.py  supported_functions.py
Food Delivery App Data Analysis R/: notebook.ipynb
Hedge fund - Time series forecasting/: notebook.ipynb
Langchain Implementation/: notebook.ipynb
PySpark Practice/: Questions.docx  notebook.ipynb  ~$estions.docx
Venezuela Resource Dependency & Economy(1960-2023)/: amith.csv  notebook.ipynb  venezuela_economy.csv  venezuela_wdi_indicators.csv
Wine Quality Prediction/: README.md  notebook.ipynb  requirements.txt  setup.py  template.py
freeCodeCamp/: tutorial1.ipynb  tutorial2.ipynb  tutorial3.ipynb  tutorial4.ipynb  tutorial5.ipynb  tutorial6.ipynb  tutorial8.ipynb
meeting_minutes/meeting_minutes_crew/: README.md  pyproject.toml
meeting_minutes/meeting_minutes_crew/src/meeting_minutes_crew/: crew.py  main.py
meeting_minutes/meeting_minutes_crew/src/meeting_minutes_crew/config/: agents.yaml  tasks.yaml
mlproj/: pyvenv.cfg
news_scraper/: README.md  notebook.ipynb  pyproject.toml
news_scraper/src/news_scraper/: 2026_news_articles.md  anthropic.md  crew.py  main.py  performance_of_organisations.md  report.md
news_scraper/src/news_scraper/config/: agents.yaml  tasks.yaml
(+28 files in other folders)
