[project]
name = "news_scraper"
version = "0.1.0"
description = "news_scraper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
news_scraper = "news_scraper.main:run"
run_crew = "news_scraper.main:run"
train = "news_scraper.main:train"
replay = "news_scraper.main:replay"
test = "news_scraper.main:test"
run_with_trigger = "news_scraper.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
