[project]
name = "meeting_minutes_crew"
version = "0.1.0"
description = "meeting_minutes_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
meeting_minutes_crew = "meeting_minutes_crew.main:run"
run_crew = "meeting_minutes_crew.main:run"
train = "meeting_minutes_crew.main:train"
replay = "meeting_minutes_crew.main:replay"
test = "meeting_minutes_crew.main:test"
run_with_trigger = "meeting_minutes_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
